[gd_scene load_steps=4 format=2]

[ext_resource path="res://font_source/menu_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/Game_over.gd" type="Script" id=2]
[ext_resource path="res://font_source/normal_font.tres" type="DynamicFont" id=3]

[node name="Game_over" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="ColorRect" parent="."]
visible = false
margin_left = 192.0
margin_top = 104.0
margin_right = 768.0
margin_bottom = 368.0
color = Color( 0.329412, 0, 0, 1 )

[node name="Game_Over" type="Label" parent="Control"]
anchor_right = 1.0
anchor_bottom = 0.993
margin_left = 216.0
margin_top = 16.0
margin_right = 504.0
margin_bottom = 77.848
custom_fonts/font = ExtResource( 1 )
text = "game over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Human_win" type="Label" parent="Control"]
visible = false
margin_left = 184.0
margin_top = 136.0
margin_right = 582.0
margin_bottom = 319.0
custom_fonts/font = ExtResource( 1 )
text = "Human survive
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wolf_win" type="Label" parent="Control"]
visible = false
margin_left = 224.0
margin_top = 136.0
margin_right = 543.0
margin_bottom = 319.0
custom_fonts/font = ExtResource( 1 )
text = "Wolf win
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back_to_menu" type="Button" parent="Control"]
margin_left = 208.0
margin_top = 216.0
margin_right = 344.0
margin_bottom = 252.0
custom_fonts/font = ExtResource( 3 )
text = "Back to menu"
[connection signal="pressed" from="Control/Back_to_menu" to="." method="_on_Back_to_menu_pressed"]
